[project]
name = "repackit"
version = "0.1.0"
description = "Telegram bot for monitoring Amazon price drops within return window"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "dstmrk" }
]

dependencies = [
    "python-telegram-bot[webhooks]>=21.0",
    "aiosqlite>=0.19",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["handlers"]
only-include = [
    "*.py",
    "handlers",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
# Use double quotes for strings (consistent with black's default)
quote-style = "double"
# Indent with spaces, not tabs
indent-style = "space"
# Unix-style line endings
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by ruff format)
    "SIM117", # nested with statements (prefer explicit nesting in tests)
    "SIM116", # dictionary instead of if/elif (prefer explicit in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["handlers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/data/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
